add css to make grocery grid

--- a/Module_10/orderPage.css
+++ b/Module_10/orderPage.css
@@ -21,7 +21,8 @@
 }
 .grocery-items {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 .grocery-item {
     border: 1px solid black;
