--- a/Module_10/orderPage.css
+++ b/Module_10/orderPage.css
@@ -2,6 +2,39 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 100px;
+    gap: 10px;
+}
+.deliver {
+    display: inline;
+    justify-content: center;
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+}
+.deliver:active {
+    box-shadow: 10px 5px 5px rgb(13, 121, 71);
+}
+.pickup {
+    display: inline;
+    justify-content: center;
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+}
+.pickup:active {
+    box-shadow: 10px 5px 5px rgb(13, 121, 71);
+}
+.app {
+    display: none;
 }
 .submitButton {
     background-color: #A52A2A;
@@ -9,34 +42,100 @@
 }
 .banner {
     background-color: #135a10;
-    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
     justify-content: center;
-    width: 105%
+    width: 100%
 }
 .logo {
     color: white;
-    font-family: "Times New Roman", Times, serif;
     font-size: 20;
     text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.exit-ticket {
+    display: none;
+    color: #4CAF50;
+    font-size: 100;
+    text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.heading-cart {
+    display: none;
 }
 .grocery-items {
     display: flex;
+    padding: 30px;
+    gap: 10px;
     flex-direction: row;
     flex-wrap: wrap;
+}
+.grocery-item:active {
+    box-shadow: 10px 5px 5px rgb(13, 121, 71);
 }
 .grocery-item {
     border: 1px solid black;
     padding: 8px;
     margin-bottom: 6px;
-    width: 25%;
+    width: 20%;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
-.button {
+.checkout-button {
     justify-content: center;
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
 /* Cart item styles */
-.cart-items {
+.cart-element {
     display: none;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.cart-item {
+    display: flex;
+    border: 1px solid black;
+    padding: 8px;
+    margin-bottom: 6px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    flex-direction: column;
+    user-select: none;
 /*daddy*/
 }
+.total {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    position: fixed;
+    bottom: 8px;
+    right: 8px;
+}
+.keep-shopping-button {
+    display: none;
+    justify-content: center;
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+}
+.final-button {
+    display: none;
+    justify-content: center;
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px; 
+}
+
 
